fix: change About Me text alignment from center to justify on mobile

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -175,7 +175,7 @@
     row-gap: 1.875rem;
   }
   .about__description {
-    text-align: center;
+    text-align: justify;
   }
 
   .about__info {
